@@ -23,6 +23,8 @@ Changes in version 0.2.0.10-alpha - 2007-1?-??
     - Directory authorities now decide whether routers are stable enough to
       be guards based not on their MTBF or their uptime, but on their
       fractional uptime: the fraction of the time that they are online.
+      (No router counts as having uptime until we've known about it for
+      at least 24 hours.)
     - Clients new hold circuitless TLS connections open for 1.5 times
       MaxCircuitDirtiness, since it is likely that they'll need to build
       a circuit over them within that timeframe.  Previously, they held them
